# fastvue-fullstack-template

./: LICENSE  README.md
api/app/: config.py  main.py
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 25fd08862078_create_users_table.py
backend/app/: config.py  database.py  exceptions.py  main.py  playground.py
backend/app/api/: dependencies.py  main.py
backend/app/api/routes/: health.py  login.py  private.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/middleware/: error_handlers.py
backend/app/models/: __init__.py  token.py  user.py
backend/app/services/: authservice.py  userservice.py
backend/scripts/: setup_dev_db.py
frontend/: index.html  package-lock.json  package.json
frontend/src/assets/: main.css
frontend/src/components/: LoginForm.vue
frontend/src/stores/: auth.ts
frontend/src/views/: HomeView.vue
